# protoSpaceJAM

./: .gitignore  EdgeCases_ATG_end_of_exon.txt  README.md  best_start_gRNAs_of_1000_genes.pickle  best_stop_gRNAs_of_1000_genes.pickle  best_stop_gRNAs_of_all_genes.pickle  input.csv  load_gene_models.py  main.py  main2.py  plot_weights.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  start_gRNAs_of_1000_genes.pickle  start_gRNAs_of_300_genes.pickle  stop_gRNAs_of_1000_genes.pickle  stop_gRNAs_of_300_genes.pickle
All_N_C_sites/: Get_all_N_C_sites.py
FindOfftargetBwa/: BRCA2_guides.fa  cmd.sh  findOfftargetsBwa.py
chm13/: cmd
crisporEffScores/: crisporEffScores.py  crisporEffScores.py.bak  notes_running_fusi.txt
docs/: Makefile  README.md  requirements-docs.txt
gRNA_GRCh38/: array.job.bwa.sh  loc2file_index.pickle
gRNA_chm13/: .gitignore  nohup.out
gRNA_hg38/: .gitignore  array.job.bwa.sh  array.job.score.failedOnly.sh  array.job.score.sh  array.job.score_check.sh  cmds.sh  loc2file_index.pickle  nohup.out
genome_files/: .gitignore  Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa.gz.out.split.tab  Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa.gz.out.tab  chm13v2.0.fa.gz.out.tab  download_genomes.sh  get_fagz_sizes.py  preprocess_GFF3.sh
hg38/: cmds
input/: OpenCell_protospaceX_design.csv  test_protoSpaceJAM.csv  zf_mapre1a.csv  zf_notch.csv
logs/: out_Cterm.csv  out_Cterm_recut_cfd.csv  out_Nterm.csv  out_Nterm_recut_cfd.csv  recut_CFD_fail.txt  recut_CFD_pass.txt  result.csv
parallel/: wrapper.py
pickles/: start_cfd1_2000_genes.pickle  (+41 more)
(+180 files in other folders)
