[metadata]
name = protoSpaceJAM
author = Duo Peng
author_email = duo.peng@czbiohub.org
url = https://github.com/czbiohub/protoSpaceJAM
license = BSD 3-Clause License
description =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Bug Tracker = https://github.com/czbiohub/protoSpaceJAM/issues
    Documentation = https://czbiohub.github.io/protoSpaceJAM/
    Source Code = https://github.com/czbiohub/protoSpaceJAM
    User Support = https://github.com/czbiohub/protoSpaceJAM/issues

[options]
package = find:
include_package_data = True
python_requires = >3.9
setup_requires = setuptools_scm
install_requires =
    biopython==1.78
    numpy
    pandas
    primer3-py
    gdown==4.6.4